--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   Perfumer-Creator for the House of CHANEL.</p>
  <div class="prices">
   <span class="sale-price">$149.99</span>
-  <span class="list-price"></span>$169.99</span>
+  <span class="list-price">$169.99</span>
  </div>
    <button><i class="fa-solid fa-cart-shopping"></i>Add to Cart</button>
   </div>
